--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "tensorboard>=2.13.0",
     "pydantic>=2.0.0",
     "pyyaml>=6.0",
+    "soundfile>=0.13.1",
 ]
 
 [project.optional-dependencies]
