--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,9 +1,8 @@
-# configs/config.yaml - Update with all parameters
+# configs/config.yaml
 defaults:
   - _self_
   - data: default
   - model: cnn_small
-  - system: auto
 
 experiment:
   name: phoneme_contrast
@@ -14,7 +13,7 @@ data:
   data_path: data/raw/New Stimuli 9-8-2024
   target_sr: 16000
   max_length_ms: 2000
-  train_split: 0.8
+  train_split: 0.85
 
 model:
   type: phoneme_cnn
@@ -31,17 +30,23 @@ training:
   # Loss configuration
   loss:
     type: supervised_contrastive
-    temperature: 0.5
+    temperature: 0.07
     
-  # System-dependent (set by system config or auto-adjust)
+  # Evaluation settings
+  eval_every: 5
+  eval_classifier_every: 5  # Run classifier evaluation every 5 epochs
+  save_every: 10
+  
+  # What metric to use for best model selection
+  best_metric: rf_accuracy  # Options: loss, linear_accuracy, rf_accuracy
+  
+  # System-dependent
   batch_size: 16
-  num_workers: 4
+  num_workers: 0
   pin_memory: null
   
   # Training options
   gradient_clip_val: 1.0
-  eval_every: 5
-  save_every: 10
   
   # Scheduler
   use_scheduler: true
