--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "pyyaml>=6.0",
     "soundfile>=0.13.1",
+    "omegaconf>=2.3.0",
 ]
 
 [project.optional-dependencies]
