refactor: comprehensive code cleanup and documentation improvements
- Add missing type hints across codebase (dataset, parser, trainer, models)
- Improve docstrings with proper Args/Returns sections
- Replace broad exception handling with specific exception types
- Fix code quality issues (line length, unused variables, comparisons)
- Add TODO comments to unimplemented model configs
- Update CLAUDE.md with detailed session logs and best practices
- Update README.md with experiment results and recommendations
- Fix duplicate logger issues
- Enhance t-SNE visualization with gender labels and smart positioning
- Format all code with ruff for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,17 @@ Thumbs.db
 .ipynb_checkpoints/
 *.ipynb
 
-# Claud
+# Additional data files per CLAUDE.md
+*.csv
+*.txt
+*.wav
+*.rhs
+*.pkl
+*.npy
+*.h5
+
+# Project meta
+claude.md
 CLAUDE.md
+.env
+configs/local/
