--- a/configs/model/cnn_deep.yaml
+++ b/configs/model/cnn_deep.yaml
@@ -1,6 +1,6 @@
 # configs/model/cnn_deep.yaml
 # Deeper CNN with residual connections
-type: phoneme_cnn_deep
+type: phoneme_cnn
 in_channels: 1
 embedding_dim: 128
 use_attention: true
