--- a/configs/model/baseline_linear.yaml
+++ b/configs/model/baseline_linear.yaml
@@ -1,5 +1,6 @@
 # configs/model/baseline_linear.yaml
 # Simple baseline
+# TODO: Model implementation pending
 type: phoneme_linear
 in_channels: 40
 embedding_dim: 128
