--- a/configs/model/tcn.yaml
+++ b/configs/model/tcn.yaml
@@ -1,5 +1,6 @@
 # configs/model/tcn.yaml
 # Temporal Convolutional Network
+# TODO: Model implementation pending
 type: phoneme_tcn
 in_channels: 40  # MFCC features
 embedding_dim: 128
