--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,7 +10,7 @@ experiment:
   output_dir: ${hydra:runtime.output_dir}
 
 data:
-  data_path: data/raw/New Stimuli 9-8-2024
+  data_path: data/New Stimuli 9-8-2024
   target_sr: 16000
   max_length_ms: 2000
   train_split: 0.85
