--- a/configs/data/default.yaml
+++ b/configs/data/default.yaml
@@ -6,6 +6,8 @@ feature_extractor:
     n_mfcc: 40
     n_fft: 400
     hop_length: 160
+    add_delta: false
+    add_delta_delta: false
 
 augmentation:
   # Waveform augmentations
