--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "pyyaml>=6.0",
     "soundfile>=0.13.1",
     "omegaconf>=2.3.0",
+    "polars>=1.31.0",
+    "ruff>=0.11.11",
 ]
 
 [project.optional-dependencies]
@@ -46,3 +48,9 @@ target-version = ['py310']
 [tool.ruff]
 line-length = 100
 select = ["E", "F", "I", "N", "W"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+]
